--- a/user-company2/src/main/resources/application.properties
+++ b/user-company2/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/codenation
+spring.datasource.url=jdbc:mysql://localhost:3306/codenation100
 spring.datasource.username=jeff
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
