--- a/party-management/src/main/resources/application.properties
+++ b/party-management/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.thymeleaf.mode=html
 spring.thymeleaf.cache=false
+spring.devtools.restart.additional-paths=templates/**
+
+spring.datasource.url=jdbc:mysql://localhost/guest
+spring.datasource.username=jeff
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=create-drop
